test/functions/diten/badwhere.good
badwhere.chpl:4: In function 'foo':
badwhere.chpl:4: error: Illegal where clause
